bdr.BDR2.scala.error
Compilation error:
BDR2:36: error: ';' expected but 'else' found.
} else {
  ^BDR2:40: error: Unmatched closing brace '}' ignored here
	}
        ^